# ai-cli

./: .gitignore  .vscodeignore  README.md  package-lock.json  package.json  pyproject.toml  setup.py
ai_cli/: main.py
ai_cli/cli/: commands.py
ai_cli/core/: aggregator.py  chunking.py  llm.py  prompts.py
src/: extension.ts  llm.ts  prompt.ts
src/ui/: webview.ts
