[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-cli"
version = "0.1.0"
description = "A Typer-based AI helper CLI for explaining, fixing, and reviewing code."
requires-python = ">=3.10"
dependencies = [
    "typer",
    "rich",
    "requests",
]

[project.scripts]
ai-cli = "ai_cli.main:app"

[tool.setuptools.packages.find]
include = ["ai_cli*"]
